--- a/config/ini_test.ini
+++ b/config/ini_test.ini
@@ -7,43 +7,34 @@ Kd = 1.5
 maxI = 6.0
 max = 100.0
 
-[Translation Control North]
+[Speed Control]
 type = PID
 Kp = 3.0
 Ki = .02
 Kd = 1.5
 maxI = 6.0
 max = 100.0
-
-[Translation Control East]
-type = PID
-Kp = 3.0
-Ki = .02
-Kd = 1.5
-maxI = 6.0
-max = 100.0
-
 
 [Pitch Control]
 type = PID
-Kp = 6.0
-Ki = .002
-Kd = 2.5
+Kp = 1.0
+Ki = 0.002
+Kd = 0.5
 maxI = 6.0
 max = 100.0
 
 [Roll Control]
 type = PID
-Kp = 6.0
-Ki = .002
-Kd = 2.5
+Kp = 1.0
+Ki = 0.002
+Kd = 0.5
 maxI = 6.0
 max = 100.0
 
 [Yaw Control]
 type = PID
-Kp = 1.0
-Ki = .001
-Kd = .25
+Kp = 0.0
+Ki = 0.0
+Kd = 0.0
 maxI = 6.0
 max = 10.0
