--- a/config/ini_test.ini
+++ b/config/ini_test.ini
@@ -38,3 +38,27 @@ Ki = 0.0
 Kd = 0.0
 maxI = 6.0
 max = 10.0
+
+[Pitch Rate Control]
+type = PID
+Kp = 1.0
+Ki = 0.002
+Kd = 0.5
+maxI = 6.0
+max = 100.0
+
+[Roll Rate Control]
+type = PID
+Kp = 1.0
+Ki = 0.002
+Kd = 0.5
+maxI = 6.0
+max = 100.0
+
+[Yaw Rate Control]
+type = PID
+Kp = 0.0
+Ki = 0.0
+Kd = 0.0
+maxI = 6.0
+max = 10.0
