--- a/config/ini_test.ini
+++ b/config/ini_test.ini
@@ -1,4 +1,3 @@
-
 [Altitude Control]
 type = PID
 Kp = 3.0
@@ -62,3 +61,7 @@ Ki = 0.0
 Kd = 0.0
 maxI = 6.0
 max = 10.0
+
+[Elevation Sensor]
+auto calibrate = no
+zero calibration = 101388.48
