--- a/config/mission.ini
+++ b/config/mission.ini
@@ -1,12 +1,12 @@
 [Objective 1]
 Type = Idle
-Duration (minutes) = 0.5
+Duration (minutes) = .1
 
 [Objective 2]
 Type = Hover
 Elevation (meters) = 10
 Minimum Altitude (meters) = 1.0
-Duration (minutes) = 0.5
+Duration (minutes) = 5.0
 
 [Objective 3]
 Type = Idle
