--- a/config/simulation.ini
+++ b/config/simulation.ini
@@ -3,7 +3,7 @@ mass = 1.25
 Ixx = 0.0
 Iyy = 0.0
 Izz = 0.0
-Lever Arm = 0.1
+Lever Arm = 0.044194
 Km = 5
 Tm = 5
 Voltage = 14.8
@@ -13,3 +13,30 @@ gravity = 9.81
 rho = 1.225
 latitude = 41.55498
 longitude = 70.62218
+
+[Simulator]
+simulation frequency (hz) = 200
+stop time (seconds) = 60
+
+[Elevation Sensor]
+noise amplitude (meters) = 0.25
+update rate (Hz) = 10.0
+
+[Altitude Sensor]
+noise amplitude (meters) = 0.005
+update rate (Hz) = 50.0
+
+[AHRS]
+pitch noise amplitude (deg) = 0.5
+roll noise amplitude (deg) = 0.5
+yaw noise amplitude (deg) = 0.5
+pitch rate noise amplitude (deg) = 1.0
+roll rate noise amplitude (deg) = 1.0
+yaw rate noise amplitude (deg) = 1.0
+update rate (Hz) = 100.0
+
+[GPS]
+lattitude error (meters) = 10.0
+longitude error (meters) = 10.0
+update rate (Hz) = 10.0
+
