--- a/config/ini_test.ini
+++ b/config/ini_test.ini
@@ -1,9 +1,17 @@
+[Altitude Rate Control]
+type = PID
+Kp = 15.0
+Ki = .002
+Kd = .001
+maxI = 30.0
+max = 100.0
+
 [Altitude Control]
 type = PID
-Kp = 3.0
-Ki = .02
-Kd = 1.5
-maxI = 6.0
+Kp = 0.5
+Ki = 0.0
+Kd = 0.05
+maxI = 30.0
 max = 100.0
 
 [Speed Control]
