Updated Sim GUI with Autopilot view, updated Standard PID to include built in rate control, all controllers now receive state, state rate, and state accel

--- a/config/ini_test.ini
+++ b/config/ini_test.ini
@@ -1,18 +1,15 @@
-[Altitude Rate Control]
-type = PID
-Kp = 15.0
-Ki = .002
-Kd = .001
-maxI = 30.0
-max = 100.0
-
 [Altitude Control]
 type = PID
 Kp = 0.5
 Ki = 0.0
 Kd = 0.05
-maxI = 30.0
-max = 100.0
+maxI = 2.0
+max = 10.0
+Kp Rate = 20
+Ki Rate = 0.01
+Kd Rate = 5.0
+maxI Rate = 30.0
+max Rate = 100.0
 
 [Speed Control]
 type = PID
@@ -39,30 +36,6 @@ maxI = 6.0
 max = 100.0
 
 [Yaw Control]
-type = PID
-Kp = 0.0
-Ki = 0.0
-Kd = 0.0
-maxI = 6.0
-max = 10.0
-
-[Pitch Rate Control]
-type = PID
-Kp = 1.0
-Ki = 0.002
-Kd = 0.5
-maxI = 6.0
-max = 100.0
-
-[Roll Rate Control]
-type = PID
-Kp = 1.0
-Ki = 0.002
-Kd = 0.5
-maxI = 6.0
-max = 100.0
-
-[Yaw Rate Control]
 type = PID
 Kp = 0.0
 Ki = 0.0
