--- a/config/mission.ini
+++ b/config/mission.ini
@@ -4,11 +4,50 @@ Duration (minutes) = .1
 
 [Objective 2]
 Type = Hover
-Elevation (meters) = 10
-Minimum Altitude (meters) = 1.0
-Duration (minutes) = 5.0
+Elevation (meters) = 1
+Minimum Altitude (meters) = 0.5
+Duration (minutes) = 0.25
 
 [Objective 3]
+Type = Set States Explicit
+Elevation (meters) = 1
+Minimum Altitude (meters) = 0.5
+Duration (minutes) = 0.25
+Roll Goal (deg) = 2
+Pitch Goal (deg) = 0
+Yaw Goal (deg) = 0
+
+[Objective 4]
+Type = Set States Explicit
+Elevation (meters) = 1
+Minimum Altitude (meters) = 0.5
+Duration (minutes) = 0.25
+Roll Goal (deg) = 0
+Pitch Goal (deg) = 2
+Yaw Goal (deg) = 0
+
+[Objective 5]
+Type = Set States Explicit
+Elevation (meters) = 1
+Minimum Altitude (meters) = 0.5
+Duration (minutes) = 0.25
+Roll Goal (deg) = -2
+Pitch Goal (deg) = 0
+Yaw Goal (deg) = 0
+
+[Objective 6]
+Type = Set States Explicit
+Elevation (meters) = 1
+Minimum Altitude (meters) = 0.5
+Duration (minutes) = 0.25
+Roll Goal (deg) = 0
+Pitch Goal (deg) = -2
+Yaw Goal (deg) = 0
+
+[Objective 7]
+Type = Land
+
+[Objective 8]
 Type = Idle
 Duration (minutes) = 1.0
 
