--- a/config/simulation.ini
+++ b/config/simulation.ini
@@ -1,25 +1,39 @@
 [Robot]
 mass = .6168
-Ixx = 0.0
-Iyy = 0.0
-Izz = 0.0
+Ixx = 0.0047
+Iyy = 0.0047
+Izz = 0.9998
 Lever Arm = 0.044194
 Km = 5
 Tm = 5
 Voltage = 14.8
 
+[Initial Conditions]
+u = 0.0
+v = 0.0
+w = 0.0
+p = 0.0
+q = 0.0
+r = 0.0
+latitude = 41.55498
+longitude = 70.62218
+northings = 4601639
+eastings = 364721
+altitude = 0.0
+phi = 0.0
+theta = 0.0
+psi = 0.0
+
 [Environment]
 gravity = 9.81
 rho = 1.225
-latitude = 41.55498
-longitude = 70.62218
 
 [Simulator]
 simulation frequency (hz) = 200
 stop time (seconds) = 60
 
 [Elevation Sensor]
-noise amplitude (meters) = 0.25
+noise amplitude (meters) = 0.0
 update rate (Hz) = 10.0
 
 [Altitude Sensor]
@@ -27,12 +41,12 @@ noise amplitude (meters) = 0.005
 update rate (Hz) = 50.0
 
 [AHRS]
-pitch noise amplitude (deg) = 0.5
-roll noise amplitude (deg) = 0.5
-yaw noise amplitude (deg) = 0.5
-pitch rate noise amplitude (deg) = 1.0
-roll rate noise amplitude (deg) = 1.0
-yaw rate noise amplitude (deg) = 1.0
+pitch noise amplitude (deg) = 0.0
+roll noise amplitude (deg) = 0.0
+yaw noise amplitude (deg) = 0.0
+pitch rate noise amplitude (deg) = 0.0
+roll rate noise amplitude (deg) = 0.0
+yaw rate noise amplitude (deg) = 0.0
 update rate (Hz) = 100.0
 
 [GPS]
