--- a/config/ini_test.ini
+++ b/config/ini_test.ini
@@ -1,15 +1,16 @@
 [Altitude Control]
 type = PID
-Kp = 0.5
+Kp = 2.0
 Ki = 0.0
-Kd = 0.05
-maxI = 2.0
-max = 10.0
-Kp Rate = 20
-Ki Rate = 0.01
-Kd Rate = 5.0
-maxI Rate = 30.0
-max Rate = 100.0
+Kd = 2.0
+maxI = 0.0
+max = 25.0
+Kp Rate = 2.0
+Ki Rate = 0.001
+Kd Rate = 2.0
+maxI Rate = 4.0
+max Rate = 25.0
+feed forward = 6.88
 
 [Speed Control]
 type = PID
@@ -22,27 +23,60 @@ max = 100.0
 [Pitch Control]
 type = PID
 Kp = 1.0
-Ki = 0.002
-Kd = 0.5
-maxI = 6.0
-max = 100.0
+Ki = 0.0
+Kd = 0.0
+maxI = 4.0
+max = 15.0
+Kp Rate = 0.12
+Ki Rate = 0.001
+Kd Rate = 0.000
+maxI Rate = 4.0
+max Rate = 15.0
+feed forward = 0.0
 
 [Roll Control]
 type = PID
 Kp = 1.0
-Ki = 0.002
-Kd = 0.5
-maxI = 6.0
-max = 100.0
+Ki = 0.0
+Kd = 0.0
+maxI = 4.0
+max = 15.0
+Kp Rate = 0.12
+Ki Rate = 0.001
+Kd Rate = 0.000
+maxI Rate = 4.0
+max Rate = 15.0
+feed forward = 0.0
 
 [Yaw Control]
 type = PID
 Kp = 0.0
 Ki = 0.0
 Kd = 0.0
-maxI = 6.0
-max = 10.0
+maxI = 0.0
+max = 0.0
+Kp Rate = 0.0
+Ki Rate = 0.0
+Kd Rate = 0.0
+maxI Rate = 0.0
+max Rate = 0.0
+feed forward = 0.0
+
+[Navigator]
+update rate (Hz) = 50
+
+[Autopilot]
+update rate (Hz) = 50
 
 [Elevation Sensor]
 auto calibrate = no
 zero calibration = 101388.48
+
+[Altitude Sensor]
+update rate (Hz) = 10
+
+[AHRS]
+update rate (Hz) = 100
+
+[GPS]
+update rate (Hz) = 10
