--- a/config/mission.ini
+++ b/config/mission.ini
@@ -13,7 +13,7 @@ Type = Set States Explicit
 Elevation (meters) = 1
 Minimum Altitude (meters) = 0.5
 Duration (minutes) = 0.25
-Roll Goal (deg) = 2
+Roll Goal (deg) = 5
 Pitch Goal (deg) = 0
 Yaw Goal (deg) = 0
 
@@ -23,7 +23,7 @@ Elevation (meters) = 1
 Minimum Altitude (meters) = 0.5
 Duration (minutes) = 0.25
 Roll Goal (deg) = 0
-Pitch Goal (deg) = 2
+Pitch Goal (deg) = 5
 Yaw Goal (deg) = 0
 
 [Objective 5]
@@ -31,7 +31,7 @@ Type = Set States Explicit
 Elevation (meters) = 1
 Minimum Altitude (meters) = 0.5
 Duration (minutes) = 0.25
-Roll Goal (deg) = -2
+Roll Goal (deg) = -5
 Pitch Goal (deg) = 0
 Yaw Goal (deg) = 0
 
@@ -41,13 +41,49 @@ Elevation (meters) = 1
 Minimum Altitude (meters) = 0.5
 Duration (minutes) = 0.25
 Roll Goal (deg) = 0
-Pitch Goal (deg) = -2
+Pitch Goal (deg) = -5
 Yaw Goal (deg) = 0
 
 [Objective 7]
-Type = Land
+Type = Set States Explicit
+Elevation (meters) = 1
+Minimum Altitude (meters) = 0.5
+Duration (minutes) = 0.25
+Roll Goal (deg) = 0
+Pitch Goal (deg) = 0
+Yaw Goal (deg) = 0
 
 [Objective 8]
+Type = Set States Explicit
+Elevation (meters) = 1
+Minimum Altitude (meters) = 0.5
+Duration (minutes) = 0.25
+Roll Goal (deg) = 5
+Pitch Goal (deg) = 5
+Yaw Goal (deg) = 0
+
+[Objective 9]
+Type = Set States Explicit
+Elevation (meters) = 1
+Minimum Altitude (meters) = 0.5
+Duration (minutes) = 0.25
+Roll Goal (deg) = -5
+Pitch Goal (deg) = -5
+Yaw Goal (deg) = 0
+
+[Objective 10]
+Type = Set States Explicit
+Elevation (meters) = 1
+Minimum Altitude (meters) = 0.5
+Duration (minutes) = 0.25
+Roll Goal (deg) = 0
+Pitch Goal (deg) = 0
+Yaw Goal (deg) = 0
+
+[Objective 11]
+Type = Land
+
+[Objective 12]
 Type = Idle
 Duration (minutes) = 1.0
 
