--- a/config/simulation.ini
+++ b/config/simulation.ini
@@ -9,20 +9,20 @@ Tm = 5
 Voltage = 14.8
 
 [Initial Conditions]
-u = 0.0
-v = 0.0
-w = 0.0
-p = 0.0
-q = 0.0
-r = 0.0
+u (m/s) = 0.0
+v (m/s) = 0.0
+w (m/s) = 0.0
+p (deg/s) = 0.0
+q (deg/s) = 0.0
+r (deg/s) = 0.0
 latitude = 41.55498
 longitude = 70.62218
 northings = 4601639
 eastings = 364721
 altitude = 0.0
-phi = 0.0
-theta = 0.0
-psi = 0.0
+phi (deg) = 5.0
+theta (deg) = -2.5
+psi (deg) = 0.0
 
 [Environment]
 gravity = 9.81
@@ -50,7 +50,7 @@ yaw rate noise amplitude (deg) = 0.0
 update rate (Hz) = 100.0
 
 [GPS]
-lattitude error (meters) = 10.0
-longitude error (meters) = 10.0
+lattitude error (meters) = 0.0
+longitude error (meters) = 0.0
 update rate (Hz) = 10.0
 
